<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.piyushsatija.pollutionmonitor.view.fragment.SettingsFragment">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:text="@string/bottomNavSettings"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/windSpeedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/windSpeed"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/settingsTitle"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitle" />

    <TextView
        android:id="@+id/windSpeedCTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/settingsTitle"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitle"
        tools:text="Km/h" />

    <View
        android:id="@+id/separator1"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@id/settingsTitle"
        app:layout_constraintStart_toStartOf="@id/settingsTitle"
        app:layout_constraintTop_toBottomOf="@id/windSpeedTextView" />

    <TextView
        android:id="@+id/temperatureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/temperature"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/settingsTitle"
        app:layout_constraintTop_toBottomOf="@+id/separator1" />

    <TextView
        android:id="@+id/temperatureCTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/settingsTitle"
        app:layout_constraintTop_toBottomOf="@+id/separator1"
        tools:text="°C" />

    <View
        android:id="@+id/separator2"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@id/settingsTitle"
        app:layout_constraintStart_toStartOf="@id/settingsTitle"
        app:layout_constraintTop_toBottomOf="@id/temperatureText" />

    <TextView
        android:id="@+id/appVersionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/appVersion"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/settingsTitle"
        app:layout_constraintTop_toBottomOf="@id/separator2" />

    <TextView
        android:id="@+id/appVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/settingsTitle"
        app:layout_constraintTop_toBottomOf="@id/separator2"
        tools:text="1.0.0" />

    <View
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@id/settingsTitle"
        app:layout_constraintStart_toStartOf="@id/settingsTitle"
        app:layout_constraintTop_toBottomOf="@id/temperatureText" />

</androidx.constraintlayout.widget.ConstraintLayout>